--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "new-folder",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Aditya Pro",
+  "license": "ISC",
   "dependencies": {
-    "http-proxy": "^1.18.1"
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "qs": "^6.11.2"
   }
 }
