--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "qs": "^6.11.2"
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
